<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.pmoerenhout</groupId>
  <artifactId>at-commander</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>

  <name>Java AT Commander</name>

  <modules>
    <module>at-commander-api</module>
    <module>at-commander-common</module>
    <module>at-commander-examples</module>
    <module>at-commander-jssc</module>
    <module>at-commander-module</module>
  </modules>

  <developers>
    <developer>
      <name>Pim Moerenhout</name>
      <email>pim.moerenhout@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git@github.com:pmoerenhout/at-commander.git</connection>
    <developerConnection>scm:git@github.com:pmoerenhout/at-commander.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>1.8</java.version>
    <java.source.version>1.8</java.source.version>
    <java.target.version>1.8</java.target.version>

    <commons-collections4.version>4.1</commons-collections4.version>
    <commons-lang3.version>3.7</commons-lang3.version>
    <commons-text.version>1.1</commons-text.version>
    <commons-rng.version>1.0</commons-rng.version>

    <jcharset.version>2.0</jcharset.version>
    <jssc.version>2.8.0</jssc.version>
    <junit.version>4.12</junit.version>
    <marineapi.version>0.10.0</marineapi.version>
    <mockito.version>2.20.1</mockito.version>
    <slf4j.version>1.7.25</slf4j.version>

    <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
    <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>oss-snapshots-repo</id>
      <name>Sonatype OSS Maven Repository</name>
      <url>https://oss.sonatype.org/content/groups/public</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>

    <repository>
      <id>central</id>
      <url>http://repo1.maven.org/maven2/</url>
    </repository>

    <repository>
      <id>oss-sonatype</id>
      <name>oss-sonatype</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>

  </repositories>

  <dependencyManagement>
    <dependencies>
      <!-- Internal module dependencies -->
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-examples</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-jssc</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-basic</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-v250</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-3gpp</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-telit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-neul</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Test JAR dependencies -->
      <dependency>
        <groupId>com.github.pmoerenhout</groupId>
        <artifactId>at-commander-module-basic</artifactId>
        <type>test-jar</type>
        <version>${project.version}</version>
        <scope>test</scope>
      </dependency>

      <!-- jSSC -->
      <dependency>
        <groupId>org.scream3r</groupId>
        <artifactId>jssc</artifactId>
        <version>${jssc.version}</version>
      </dependency>

      <!--  Charsets-->
      <dependency>
        <groupId>net.freeutils</groupId>
        <artifactId>jcharset</artifactId>
        <version>${jcharset.version}</version>
      </dependency>

      <!-- NMEA -->
      <dependency>
        <groupId>net.sf.marineapi</groupId>
        <artifactId>marineapi</artifactId>
        <version>${marineapi.version}</version>
      </dependency>

      <!-- Apache Commons -->
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${commons-collections4.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-rng-simple</artifactId>
        <version>${commons-rng.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-rng-core</artifactId>
        <version>${commons-rng.version}</version>
      </dependency>

      <!-- Slf4j -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${java.source.version}</source>
            <target>${java.target.version}</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
